syntax = "proto3";

option csharp_namespace = "AnonForum.Contracts";

package forum;

service Forum {
  rpc GetTopics (GetTopicsRequest) returns (GetTopicsResponse);
  rpc GetTopic (GetTopicRequest) returns (Topic);
  rpc CreateTopic (CreateTopicRequest) returns (Topic);
  rpc GetMessages (GetMessagesRequest) returns (GetMessagesResponse);
  rpc SendMessage (SendMessageRequest) returns (Message);
}

message GetTopicRequest {
  string id = 1;
}

message GetTopicsRequest {
  string search_query = 1;
}

message GetTopicsResponse {
  repeated Topic topics = 1;
}

message Topic {
  string id = 1;
  string title = 2;
  string description = 3;
  int64 created_at = 4;
}

message CreateTopicRequest {
  string title = 1;
  string description = 2;
}

message GetMessagesRequest {
  string topic_id = 1;
}

message GetMessagesResponse {
  repeated Message messages = 1;
}

message Message {
  string id = 1;
  string topic_id = 2;
  string content = 3;
  int64 created_at = 4;
}

message SendMessageRequest {
  string topic_id = 1;
  string content = 2;
}
